# conganew

./: .gitignore  MANIFEST.in  MANIFEST.in.new  Pipfile  README.md  Streamlit_app.py  Streamlit_app.py.new  USER_GUIDE.md  __init__.py  main.py  requirements.txt  requirements.txt.new  secrets.toml.example  setup.cfg  setup.py  setup.py.new  streamlit_app.py  test_conversion.py
.streamlit/: config.toml  config.toml.new
app/: __init__.py  __main__.py  app.py  box_ai_client.py  conversion_engine.py  converter.py  exporter.py  parser.py  prompt_builder.py  query_loader.py  response_parser.py  schema_loader.py  template_generator.py  validation_engine.py  validator.py
app/auth/: __init__.py
test_output/: converted_CT002 Civil lawyer warm referral letter.docx
