[develop]
# Make sure the app package is in the Python path
package_dir = 
    = .

[options]
packages = find:
include_package_data = True
python_requires = >=3.9,<3.10

[options.entry_points]
# This makes the package installable in development mode
# and ensures the app directory is in the Python path
console_scripts =
    conga-converter = app.app:main

[options.packages.find]
include = app*
